- removed hardcoded port (defaults to 8080 still, can be overriden by environment variable) - fixed case where a crashing lobby takes down other lobbies and the server as a whole (todo: fix out of bounds panic that happens rarely when all players disconnect) - fixed case where the current player (its their turn) disconnecting would softlock the game - added celebratory status text when a winner has been determined

--- a/static/main.css
+++ b/static/main.css
@@ -1931,10 +1931,6 @@ html {
   line-height: 2rem;
 }
 
-.opacity-50 {
-  opacity: 0.5;
-}
-
 .opacity-40 {
   opacity: 0.4;
 }
